--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,8 @@ body {
     
 }
 h1 {
-    margin-top: 10vh;
-    margin-bottom: 10vh;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
     margin-left: 30px;
     margin-right: 30px;
     font-family: "Fredoka One", cursive;
@@ -18,10 +18,10 @@ h1 {
     text-align: center;
 }
 .balance {
-    margin-top: 10vh;
-    margin-bottom: 10vh;
-    margin-left: 230px;
-    margin-right: 236px;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    margin-left: 150px;
+    margin-right: 150px;
     font-family: "Fredoka One", cursive;
     color: white;
     letter-spacing: 5px;
@@ -143,13 +143,14 @@ a:hover {
 }
 
 .monster-container, .user-monsters-container, .inventory-container, .egg-container{
+    /* margin-top: 50px; */
     display: flex;
     flex-flow: row wrap;
     align-content: space-around;
     justify-content: center;
     text-align: center;
     /* max-width: 90%; */
-    margin: 0px auto;
+    margin: 20px auto;
     /* padding: 15px; */
     max-width: 960px;
     padding: 2.25%; 
@@ -166,6 +167,7 @@ a:hover {
     border-color: black;
 
 } */
+
 
 .monster-tile {
     max-width: 200px;
@@ -189,6 +191,11 @@ a:hover {
     border-color: black;
     background-color: rgba(132, 92, 160, 0.4);
     font-family: "Fredoka One", bold;
+}
+
+.inventory-tile img:hover, .item-tile img:hover {
+    height: 25%;
+    width: auto;
 }
 
 .inventory-tile p, .item-tile p {
@@ -283,6 +290,22 @@ p {
     background-color: rgba(255, 255, 255, 0.7);
 }
 
+.edit-profile-page {
+    display: inline-block;
+    /* flex-flow: row wrap; */
+    /* align-content: space-around; */
+    justify-content: center;
+    text-align: center;
+    /* max-width: 90%; */
+    margin-top: 50px;
+    /* padding: 15px; */
+    max-width: 500px;
+    padding: 2.25%;
+    width: 85%;
+    border-radius: 25px;
+    background-color: rgb(149, 145, 212);
+}
+
 .profile-page-img img {
     max-height: 500px;
     max-width: auto
@@ -301,6 +324,27 @@ p {
     margin-left: 500px;
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
+#sign-up-form {
+    background-color: #FFFFFF;
+    width: 400px;
+    height: 450px;
+    margin-top: 30px;
+    margin-left: 500px;
+    border-radius: 1.5em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+}
+
+#edit-profile-form {
+    transform: translateX(19%);
+    justify-content: center;
+    text-align: center;
+    max-width: 500px;
+    padding: 1.25%;
+    height: 400px;
+    width: 70%;
+    border-radius: 25px;
+    background-color: white;
 }
 
 .uni1 {
@@ -322,6 +366,25 @@ p {
     margin-bottom: 27px;
     font-family: 'Ubuntu', sans-serif;
     }
+.uni2 {
+    width: 76%;
+    color: rgb(38, 50, 56);
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 1px;
+    background: rgba(136, 126, 126, 0.04);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 0, 0, 0.02);
+    margin-bottom: 50px;
+    margin-left: 16px;
+    text-align: center;
+    margin-bottom: 27px;
+    font-family: 'Ubuntu', sans-serif;
+}
 
 #add-balance-form label {
     margin-left: 100px;
@@ -330,6 +393,14 @@ p {
 .sign1 {
     padding-top: 40px;
     padding-bottom: 30px;
+    color: black;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: bold;
+    font-size: 23px;
+}
+.sign2 {
+    padding-top: 10px;
+    padding-bottom: 10px;
     color: black;
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
@@ -352,3 +423,40 @@ p {
       font-size: 13px;
       box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
   }
+
+  .submit2 {
+    cursor: pointer;
+      border-radius: 1em;
+      color: #fff;
+      background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 0));
+      border: 0;
+      padding-left: 40px;
+      padding-right: 40px;
+      padding-bottom: 10px;
+      padding-top: 10px;
+      font-family: 'Ubuntu', sans-serif;
+      margin-left: 34%;
+      margin-top: 20px;
+      font-size: 13px;
+      box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+  }
+
+  .submit3 {
+    cursor: pointer;
+    border-radius: 1em;
+    color: #fff;
+    background: linear-gradient(to right, rgb(0, 0, 0), rgb(0, 0, 0));
+    border: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-top: 20px;
+    font-size: 13px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+  }
+.inventory-display {
+    margin-left: 185px;
+    margin-right: 185px;
+}
