--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,18 @@
 body {
-    background-color: rgb(149, 145, 212);
+    /* background-color: rgb(149, 145, 212); */
+    background: url("https://github.com/ZeChrales/PogoAssets/blob/master/static_assets/png/Parkscene_Background.png?raw=true");
+    background-size: auto 670px;
+    background-attachment: fixed;
 }
 
-.nav-bar {
-    
+/* .body-home-page {
+    background: url("https://github.com/ZeChrales/PogoAssets/blob/master/static_assets/png/Parkscene_Background.png?raw=true");
+    background-size: auto 670px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+} */
+.home-page {
+    margin-top: 200px;
 }
 h1 {
     margin-top: 5vh;
@@ -303,7 +312,6 @@ p {
     padding: 2.25%;
     width: 85%;
     border-radius: 25px;
-    background-color: rgb(149, 145, 212);
 }
 
 .profile-page-img img {
@@ -398,6 +406,7 @@ p {
     font-weight: bold;
     font-size: 23px;
 }
+
 .sign2 {
     padding-top: 10px;
     padding-bottom: 10px;
